wrapping screen is working

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Asteroids!</title>
 
         <meta name='description' content='A simple game of asteroids'>
-        <meta name='author' content='You!'>
+        <meta name='Marian' content='an asteroid game'>
         <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
 
         <link rel='stylesheet' type='text/css' href='game.css'>
@@ -13,6 +13,8 @@
     <body>
         <main>
             <div id='ship'></div>
+
+            <div
         </main>
 
         <script src='game.js'></script>
